feat: harden internal agent orchestration