@@ -4,17 +4,53 @@
 package io.agent.platform.runtime.protocol;
 
 import java.util.Map;
+import java.util.List;
 
 public record TaskResult(
         String taskId,
         TaskStatus status,
         String content,
         Map<String, Object> data,
+        String summary,
+        List<Map<String, Object>> artifacts,
         TaskError error,
         Map<String, Object> usage) {
+
+    /** Backward-compatible constructor for callers using the original task result fields. */
+    public TaskResult(
+            String taskId,
+            TaskStatus status,
+            String content,
+            Map<String, Object> data,
+            TaskError error,
+            Map<String, Object> usage) {
+        this(taskId, status, content, data, content, List.of(), error, usage);
+    }
+
     public TaskResult {
         status = status == null ? TaskStatus.COMPLETED : status;
-        data = data == null ? Map.of() : Map.copyOf(data);
-        usage = usage == null ? Map.of() : Map.copyOf(usage);
+        data =
+                data == null
+                        ? Map.of()
+                        : java.util.Collections.unmodifiableMap(
+                                new java.util.LinkedHashMap<>(data));
+        summary = summary == null ? content : summary;
+        artifacts = artifacts == null ? List.of() : List.copyOf(artifacts);
+        usage =
+                usage == null
+                        ? Map.of()
+                        : java.util.Collections.unmodifiableMap(
+                                new java.util.LinkedHashMap<>(usage));
+    }
+
+    public AgentBusinessResult businessResult() {
+        return new AgentBusinessResult(
+                status == TaskStatus.COMPLETED
+                        ? AgentBusinessResult.SUCCEEDED
+                        : AgentBusinessResult.FAILED,
+                data,
+                summary,
+                artifacts,
+                error);
     }
 }
